# hopy

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README-en.md  README.md
.github/workflows/: build-windows.yml  release.yml
docs/superpowers/plans/: 2026-07-04-content-aware-actions.md  2026-07-04-hopy-auto-update.md
docs/superpowers/specs/: 2026-07-04-content-aware-actions-design.md  2026-07-04-hopy-auto-update-design.md  2026-07-06-update-ui-design.md
resources/: hopy.qrc  hopy.rc  hopy.rc.in
resources/themes/: dark.qss  light.qss
src/: main.cpp
src/app/: Application.cpp  Application.h  UpdateService.cpp  UpdateService.h
src/clipboard/: ClipboardMonitor.cpp  ClipboardMonitor.h  ClipboardWriter.cpp  ClipboardWriter.h  PasteService.cpp  PasteService.h
src/config/: Settings.cpp  Settings.h
src/hotkey/: GlobalHotkey.cpp  GlobalHotkey.h
src/platform/: Autostart.cpp  Autostart.h  CaretProbe.cpp  CaretProbe.h  ForegroundWindow.cpp  ForegroundWindow.h  InputHook.cpp  InputHook.h  RevealInExplorer.cpp  RevealInExplorer.h  ScreenInfo.cpp  ScreenInfo.h  UpdateInstaller.cpp  UpdateInstaller.h
src/storage/: ClipboardRepository.cpp  ClipboardRepository.h  Database.cpp  Database.h  Record.h
src/ui/: HotkeyEdit.cpp  HotkeyEdit.h  IconButton.cpp  IconButton.h  MainWindow.cpp  MainWindow.h  OpenAction.cpp  OpenAction.h  PreviewPopup.cpp  PreviewPopup.h  RecordDelegate.cpp  RecordDelegate.h  RecordListModel.cpp  RecordListModel.h  ScreenPlacement.cpp  ScreenPlacement.h  Theme.cpp  Theme.h  TrayIcon.cpp  TrayIcon.h  TypeFilter.cpp  TypeFilter.h  UpdateDialog.cpp  UpdateDialog.h
src/ui/panel/: AboutPanel.cpp  AboutPanel.h  HelpPanel.cpp  HelpPanel.h  SettingsPanel.cpp  SettingsPanel.h
src/update/: ReleaseInfo.h  UpdateChecker.cpp  UpdateChecker.h  UpdateConfig.h  UpdateDownloader.cpp  UpdateDownloader.h
src/util/: BuildInfo.cpp  BuildInfo.h  BuildVersion.h.in  ColorDetect.cpp  ColorDetect.h  Hash.cpp  Hash.h  I18n.cpp  I18n.h  Icons.cpp  Icons.h  OpenTarget.cpp  OpenTarget.h  Paths.cpp  Paths.h  Strings.h  TextInfo.cpp  TextInfo.h  Version.cpp  Version.h
tests/: CMakeLists.txt  test_clipboard_detect.cpp  test_colordetect.cpp  test_hash.cpp  test_open_target.cpp  test_preview_popup.cpp  test_record_delegate.cpp  test_repository.cpp  test_reveal.cpp  test_screenplacement.cpp  test_settings.cpp  test_smoke.cpp  test_text_info.cpp  test_typefilter.cpp  test_update_checksum.cpp  test_update_installer.cpp  test_update_notes.cpp  test_update_parse.cpp  test_update_ratelimit.cpp  test_version.cpp
